--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   },
   "homepage": "https://github.com/OlegArtemiev/frontend-project-lvl2#readme",
   "dependencies": {
-    "commander": "^8.1.0"
+    "commander": "^8.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6"
   }
 }
