--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,12 +1,17 @@
+plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
+  - jest
 env:
   es2021: true
   node: true
 extends:
   - airbnb-base
+  - 'plugin:jest/recommended'  
 parserOptions:
-  ecmaVersion: 12
+  ecmaVersion: 2020
   sourceType: module
 rules: {
   no-console: 0,
-  import/extensions: 0
+  import/extensions: 0,
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
 }
